--- a/jira/src/App.css
+++ b/jira/src/App.css
@@ -1,38 +1,13 @@
-.App {
-  text-align: center;
+html {
+  /* rem em */
+  /* em 相对于父级元素的 font-size ;
+  rem 相对于 跟级元素的 font-size r 就是 root 的意思;
+  16 * 62.5 = 10xp
+  1rem === 10px */
+  font-size: 62.5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html body #root .App {
+  min-height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
